[package]
name = "idle_on_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {vaesion="0.12",features= ["dynamic_linking"]}

[workspace]
resolver = "2"

[profile.dev]
opt-level =1

[profile.dev.package."*"]
opt-level =3

