[package]
name = "idle_on_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.12",features= ["dynamic_linking"]}
# bevy_egui = "0.23.0"

[workspace]
resolver = "2"

[profile.dev]
opt-level =1

[profile.dev.package."*"]
opt-level =3

